--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
     color: white;
         }
 
-   .page-center {
+  .page-center {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 100vh;
-     background-image: url("IMG_7413 2.JPG");
+     background-image: url(IMG_7413 2.JPG);
      background-repeat: no-repeat;
      background-position: top center;
      background-size: cover;
