--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
      align-items: center;
      justify-content: center;
      height: 100vh;
-     background-image: url(IMG_7413 2.JPG);
+     background-image: url("IMG_7413 2.JPG");
      background-repeat: no-repeat;
      background-position: top center;
      background-size: cover;
-}
+
         
         *{
 	font-family: 'Oswald', sans-serif;
