--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
      align-items: center;
      justify-content: center;
      height: 100vh;
-     background-image: url(IMG_7413.JPG);
+     background-image: url(XKEYZ.jpg);
      background-repeat: no-repeat;
      background-position: top center;
      background-size: cover;
