--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         </style>
     </head>
     <body>
-      <div id="superphone-widget-page" style="background-size:cover;background-repeat:no-repeat;background-image:url(https://cdn.filestackcontent.com/BBz0Rw3LSHWU0ZkKr1ZZ);background-color:rgba(0,0,0,1);font-family:Circular, Arial;">
+      <div id="superphone-widget-page" style="background-size:cover;background-repeat:no-repeat;background-image:url(https://cdn.filestackcontent.com/BBz0Rw3LSHWU0ZkKr1ZZ);background-color:rgba(224,224,224,1);font-family:Circular, Arial;">
         <div id="superphone-widget-wrapper">
-          <div id="superphone-widget-landing-wrapper" class="superphone-widget widget-landing" style="background-color: rgba(255,255,255,0);">
-            <div id="superphone-widget-title" style="color: null">Please leave your number below </div>
-            <div id="superphone-widget-description" style="color: null">&amp; I&#39;ll shoot you a text</div>
+          <div id="superphone-widget-landing-wrapper" class="superphone-widget widget-landing" style="background-color: rgba(3,3,3,0);">
+            <div id="superphone-widget-title" style="color: rgba(224,224,224,1)">Please leave your number below </div>
+            <div id="superphone-widget-description" style="color: rgba(224,224,224,1)">&amp; I&#39;ll shoot you a text right back</div>
             <form id="addContact" action="#" method="POST" autocomplete="false">
               <div id="superphone-input-wrapper">
                 <div class="phone-input-wrapper">
@@ -73,7 +73,7 @@
                   >
                 </div>
                 <div class="superphone-send-button">
-                  <button style="background: rgba(255,255,252,1); color: null;font-family: Circular, Arial" type="submit" id="submitButton">Send</button>
+                  <button style="background: rgba(255,255,252,0); color: rgba(224,224,224,1);font-family: Circular, Arial" type="submit" id="submitButton">Send</button>
                 </div>
               </div>
               <div id="form-error-message" class="form-error">
