--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <div id="superphone-input-wrapper">
                 <div class="phone-input-wrapper">
                   <input
+                      style="background-color:rgba(255,255,255,0)"
                       autocomplete="off"
                       tabindex="4"
                       type="tel"
