--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
       <div id="superphone-widget-page" style="background-size:cover;background-repeat:no-repeat;background-image:url(https://cdn.filestackcontent.com/JBJz7J9LSPSyAtDUvQ6Y);background-color:rgba(18,40,6,0);font-family:Circular, Arial;">
         <div id="superphone-widget-wrapper">
           <div id="superphone-widget-landing-wrapper" class="superphone-widget widget-landing" style="background-color: rgba(3,3,3,0);">
-            <div id="superphone-widget-title" style="color: rgba(224,224,224,1)">XAVIER KEYZ </div>
-            <div id="superphone-widget-description" style="color: rgba(224,224,224,1)">Please leave your number below  &amp; I&#39;ll shoot you a text right back</div>
+            <div id="superphone-widget-title" style="color: rgba(255,255,255,1)">XAVIER KEYZ </div>
+            <div id="superphone-widget-description" style="color: rgba(255,255,255,1)">Please leave your number below  &amp; I&#39;ll shoot you a text right back</div>
             <form id="addContact" action="#" method="POST" autocomplete="false">
               <div id="superphone-input-wrapper">
                 <div class="phone-input-wrapper">
                   <input
-                      style="background-color:rgba(255,255,255,0)"
+                      style="color:rgba(255,255,255,1);background-color:rgba(255,255,255,0)"
                       autocomplete="off"
                       tabindex="4"
                       type="tel"
@@ -74,7 +74,7 @@
                   >
                 </div>
                 <div class="superphone-send-button">
-                  <button style="background: rgba(255,255,252,0); color: rgba(224,224,224,1);font-family: Circular, Arial" type="submit" id="submitButton">Send</button>
+                  <button style="background: rgba(255,252,252,0); color: rgba(255,255,255,1);font-family: Circular, Arial" type="submit" id="submitButton">Send</button>
                 </div>
               </div>
               <div id="form-error-message" class="form-error">
