Update index.html 9-30-2023

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Landing widget</title>
 
         <style>
-          
+          @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
         </style>
 
         
@@ -54,16 +54,16 @@
         </style>
     </head>
     <body>
-      <div id="superphone-widget-page" style="background-size:cover;background-repeat:no-repeat;background-image:url(https://cdn.filestackcontent.com/EHuXMEXQnOILRM1m4qZz);background-color:rgba(18,40,6,0);font-family:Circular, Arial;">
+      <div id="superphone-widget-page" style="background-size:cover;background-repeat:no-repeat;background-image:url(https://cdn.filestackcontent.com/EHuXMEXQnOILRM1m4qZz);background-color:rgba(18,41,6,0);font-family:"Josefin Sans";">
         <div id="superphone-widget-wrapper">
           <div id="superphone-widget-landing-wrapper" class="superphone-widget widget-landing" style="background-color: rgba(18,40,6,0);">
-            <div id="superphone-widget-title" style="color: rgba(255,255,255,1)">XAVIER KEYZ </div>
-            <div id="superphone-widget-description" style="color: rgba(255,255,255,1)">Please leave your number below  &amp; I&#39;ll shoot you a text right back</div>
+            <div id="superphone-widget-title" style="color: rgba(231,226,52,1)">XAVIER KEYZ </div>
+            <div id="superphone-widget-description" style="color: rgba(0,0,0,1)">Please leave your number below  &amp; I&#39;ll shoot you a text right back</div>
             <form id="addContact" action="#" method="POST" autocomplete="false">
               <div id="superphone-input-wrapper">
                 <div class="phone-input-wrapper">
                   <input
-                      style="color:rgba(255,255,255,1);background-color:rgba(255,255,255,0)"
+                      style="color:rgba(0,0,0,1);background-color:rgba(255,255,255,0.39)"
                       autocomplete="off"
                       tabindex="4"
                       type="tel"
@@ -74,7 +74,7 @@
                   >
                 </div>
                 <div class="superphone-send-button">
-                  <button style="background: rgba(255,252,252,0); color: rgba(255,255,255,1);font-family: Circular, Arial" type="submit" id="submitButton">Send</button>
+                  <button style="background: rgba(0,0,0,1); color: rgba(231,226,52,1);font-family: "Josefin Sans"" type="submit" id="submitButton">Send</button>
                 </div>
               </div>
               <div id="form-error-message" class="form-error">
